[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sslproject"
version = "2.2.3dev8"
description = "Flex Implementation of self supervised learning methods"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "h128bit"}
]
urls = {Homepage = "https://github.com/h128bit/SSLProject"}
keywords = ["self-supervised-learning", "pytorch", "computer-vision"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "albumentationsx",
    "matplotlib>=3.5.0",
    "numpy>=2",
    "pandas>=1.4.0",
    "Pillow>=9.0.0",
    "timm>=0.9.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tqdm>=4.60.0",
    "info-nce-pytorch",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["docs*", "tests*"]